Update after merge
2004-11-22  Alexander Larsson  <alexl@redhat.com>

	* POTFILES.in:
	* POTFILES.skip:
	Update after merge

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-22  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in:
+	* POTFILES.skip:
+	Update after merge
+
 2004-11-20  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Fixed typos.
