--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2004-11-22  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-undo-signal-handlers.c:
+	Fix include.
+
+2004-11-22  Alexander Larsson  <alexl@redhat.com>
         * Merge bonobo-slay-branch
 	
 2004-11-22  Alexander Larsson  <alexl@redhat.com>
