Updated Danish translation.
        * da.po: Updated Danish translation.

--- a/po/da.po
+++ b/po/da.po
@@ -31,8 +31,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-10-28 17:11+0200\n"
-"PO-Revision-Date: 2004-10-22 10:47+0200\n"
+"POT-Creation-Date: 2004-11-23 13:59+0100\n"
+"PO-Revision-Date: 2004-11-23 13:56+0100\n"
 "Last-Translator: Martin Willemoes Hansen <mwh@sysrq.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
@@ -4234,12 +4234,12 @@ msgstr "Træk og slip-fejl"
 msgid "An invalid drag type was used."
 msgstr "En ugyldig trækketype blev brugt."
 
-#: src/file-manager/fm-list-view.c:1542
+#: src/file-manager/fm-list-view.c:1557
 #, c-format
 msgid "%s Visible Columns"
 msgstr "%s synlige kolonner"
 
-#: src/file-manager/fm-list-view.c:1561
+#: src/file-manager/fm-list-view.c:1576
 msgid "Choose the order of information to appear in this folder."
 msgstr "Vælg rækkefølgen af oplysninger der vises i denne mappe."
 
@@ -5025,10 +5025,10 @@ msgstr ""
 "biblioteket. En anden mulig årsag kunne være en forkert installation hvor "
 "Nautilus_Shell.oaf-filen mangler.\n"
 "\n"
-"Kørsel af \"bonobo-slay\" vil dræbe alle GConf- og Bonobo-"
+"Kørsel af \"bonobo-slay\" vil afslutte alle GConf- og Bonobo-"
 "aktiveringsprocesser som måske bruges af andre programmer.\n"
 "\n"
-"Nogen gange kan det at dræbe bonobo-activation-server og gconfd ordne "
+"Nogen gange kan det at afslutte bonobo-activation-server og gconfd ordne "
 "problemet, men vi véd ikke hvorfor.\n"
 "\n"
 "Fejlen er også set når en fejlagtig udgave af bonobo-activation var "
@@ -5063,8 +5063,8 @@ msgid ""
 "restarting Nautilus may help fix the problem."
 msgstr ""
 "Nautilus kan ikke bruges nu pga. en uventet fejl fra Bonobo ved forsøg på at "
-"at finde fabrikken. At dræbe bonobo-activation-server og genstarte Nautilus "
-"kan måske løse problemet."
+"at finde fabrikken. At afslutte bonobo-activation-server og genstarte "
+"Nautilus kan måske løse problemet."
 
 #: src/nautilus-application.c:568
 msgid ""
@@ -5073,7 +5073,7 @@ msgid ""
 "restarting Nautilus may help fix the problem."
 msgstr ""
 "Nautilus kan ikke bruges nu pga. en uventet fejl fra Bonobo ved forsøg på at "
-"at finde skalobjektet. At dræbe bonobo-activation-server og genstarte "
+"at finde skalobjektet. At afslutte bonobo-activation-server og genstarte "
 "Nautilus kan måske løse problemet."
 
 #: src/nautilus-bookmarks-window.c:150
@@ -6534,11 +6534,14 @@ msgstr "Copyright © 1999-2001 Eazel, Inc."
 #: src/nautilus-window-menus.c:580 src/nautilus-window-menus.c:581
 msgid "Translator Credits"
 msgstr ""
-"Keld Simonsen <keld@dkuug.dk>\n"
-"Kenneth Christiansen <kenneth@gnu.org>\n"
-"Kim Schulz <kim@schulz.dk>\n"
-"Martin Willemoes Hansen <mwh@sysrq.dk>\n"
-"Ole Laursen <olau@hardworking.dk>"
+"Keld Simonsen\n"
+"Kenneth Christiansen\n"
+"Kim Schulz\n"
+"Martin Willemoes Hansen\n"
+"Ole Laursen\n"
+"\n"
+"Dansk-gruppen <dansk@klid.dk>\n"
+"Mere info: http://www.klid.dk/dansk/"
 
 #: src/nautilus-window-menus.c:586
 msgid ""
@@ -7091,7 +7094,7 @@ msgstr "Vis dine netværksservere i Nautilus-filhåndteringen"
 #~ "\n"
 #~ "medusa-searchd"
 #~ msgstr ""
-#~ "Din indeksfiler er tilgængelige, men Medusa søgedæmonen som håndterer "
+#~ "Din indeksfiler er tilgængelige, men Medusa søgeserveren som håndterer "
 #~ "indeksforespørgsler, kører ikke. Start dette program ved at logge ind som "
 #~ "root og indtaste følgende kommando ved kommandolinjen:\n"
 #~ "\n"
@@ -7583,7 +7586,7 @@ msgstr "Vis dine netværksservere i Nautilus-filhåndteringen"
 #~ "Den øger hastigheden af søgninger og tillader dig at søge efter\n"
 #~ "filindhold og -navn, dato, og andre egenskaber ved filer. Indekseringen\n"
 #~ "tager tid, men bliver udført mens maskinen ikke laver noget.\n"
-#~ "Hurtige søgninger kræver at cron-dæmonen kører på systemet.\n"
+#~ "Hurtige søgninger kræver at cron-serveren kører på systemet.\n"
 
 #~ msgid ""
 #~ "The fast search feature indexes all the items on your hard disk.\n"
