Update for release.
2004-11-24  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
-This is nautilus 2.8.2, the file manager for the Gnome 2 desktop.
+This is nautilus 2.9.1, the file manager for the Gnome 2 desktop.
+
+Major changes since 2.8.2 are:
+* Bonobo not used for nautilus views
+* GtkUIManager used for the ui, not BonoboUI
 
 Major changes since 2.8.1 are:
 * On mime mismatch, allow open with default app as open with
