--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-24  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release.
+
 2004-11-22  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-undo-signal-handlers.c:
