--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-11-24  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in: 
+	Post release version bump
+
+=== nautilus 2.9.1 ===
+	
+2004-11-24  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release.
 
