--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-24  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 === nautilus 2.9.1 ===
 	
 2004-11-24  Miloslav Trmac  <mitr@volny.cz>
