2004-11-25 Updated ja.po. T.Aihana <aihana@gnome.gr.jp>

--- a/po/ja.po
+++ b/po/ja.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-24 13:23+0100\n"
-"PO-Revision-Date: 2004-10-17 01:14+0900\n"
+"POT-Creation-Date: 2004-11-25 12:17+0900\n"
+"PO-Revision-Date: 2004-11-25 12:08+0900\n"
 "Last-Translator: Takeshi AIHANA <aihana@gnome.gr.jp>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
@@ -3248,9 +3248,8 @@ msgid "Desktop"
 msgstr "デスクトップ"
 
 #: src/file-manager/fm-desktop-icon-view.c:768
-#, fuzzy
 msgid "_Desktop"
-msgstr "デスクトップ"
+msgstr "デスクトップ(_D)"
 
 #: src/file-manager/fm-directory-view.c:509
 #, c-format
@@ -3651,11 +3650,10 @@ msgstr "スクリプト(_S)"
 
 #. name, stock id, label
 #: src/file-manager/fm-directory-view.c:5695
-#, fuzzy
 msgid "Run or manage scripts from ~/.gnome2/nautilus-scripts"
 msgstr ""
-"スクリプト・フォルダ (~/Nautilus/scripts) にあるのスクリプトの実行また管理を"
-"行います"
+"スクリプト・フォルダ (~/.gnome2/nautilus-scripts) にあるスクリプトの実行また"
+"管理を行います"
 
 #. name, stock id
 #: src/file-manager/fm-directory-view.c:5697
@@ -3926,9 +3924,8 @@ msgstr "選択したボリュームをアンマウントします"
 
 #. name, stock id
 #: src/file-manager/fm-directory-view.c:5812
-#, fuzzy
 msgid "Open File and Close window"
-msgstr "新しいウィンドウで開く"
+msgstr "ファイルを開いてウィンドウを閉じます"
 
 #. name, stock id
 #: src/file-manager/fm-directory-view.c:5819
@@ -4251,7 +4248,6 @@ msgstr "名前順に整理する(_U)"
 
 #. label, accelerator
 #: src/file-manager/fm-icon-view.c:1402
-#, fuzzy
 msgid "Reposition icons to better fit in the window and avoaction overlapping"
 msgstr "ウィンドウ内でアイコンを並び替えて、重ならないようにします"
 
@@ -4340,9 +4336,8 @@ msgid "An invalid drag type was used."
 msgstr "使用したドラッグの種類は無効です。"
 
 #: src/file-manager/fm-icon-view.c:2842
-#, fuzzy
 msgid "_Icons"
-msgstr "アイコン"
+msgstr "アイコン(_I)"
 
 #: src/file-manager/fm-list-view.c:1564
 #, c-format
@@ -4364,9 +4359,8 @@ msgid "Select the columns visible in this folder"
 msgstr "このフォルダの中に表示できる項目を選択して下さい"
 
 #: src/file-manager/fm-list-view.c:2269
-#, fuzzy
 msgid "_List"
-msgstr "リスト"
+msgstr "一覧(_L)"
 
 #: src/file-manager/fm-properties-window.c:478
 msgid "You can't assign more than one custom icon at a time!"
@@ -5627,7 +5621,7 @@ msgstr "場所(_L)..."
 #: src/nautilus-navigation-window-menus.c:545
 #: src/nautilus-spatial-window.c:578
 msgid "Specify a location to open"
-msgstr ""
+msgstr "開く場所を指定して下さい"
 
 #: src/nautilus-navigation-window-menus.c:547
 msgid "_Clear History"
@@ -5979,20 +5973,16 @@ msgid "Content View"
 msgstr "内容表示"
 
 #: src/nautilus-window-manage-views.c:986
-#, fuzzy
 msgid "View of the current folder"
-msgstr "このファイルまたはフォルダを表示します"
+msgstr "このフォルダを表示します"
 
 #: src/nautilus-window-manage-views.c:1347
-#, fuzzy
 msgid "Nautilus has no installed viewer capable of displaying the folder."
-msgstr ""
-"Nautilus でそのファイルを表示するためのビューアがインストールされていません。"
+msgstr "Nautilus でフォルダを表示できるビューアがインストールされていません。"
 
 #: src/nautilus-window-manage-views.c:1353
-#, fuzzy
 msgid "The location is not a folder."
-msgstr "場所 \"%s\" はもはや存在しません。"
+msgstr "その場所はフォルダではありません。"
 
 #: src/nautilus-window-manage-views.c:1380
 #, c-format
@@ -6191,9 +6181,8 @@ msgstr "サーバへ接続(_S)..."
 
 #. label, accelerator
 #: src/nautilus-window-menus.c:627
-#, fuzzy
 msgid "Set up a connection to a network server"
-msgstr "このサーバへ永続的に接続します"
+msgstr "ネットワーク・サーバへの接続を設定します"
 
 #. name, stock id
 #: src/nautilus-window-menus.c:630
@@ -6202,9 +6191,8 @@ msgstr "ホーム(_H)"
 
 #. label, accelerator
 #: src/nautilus-window-menus.c:631
-#, fuzzy
 msgid "Go to the home folder"
-msgstr "ゴミ箱フォルダへ移動します"
+msgstr "ホーム・フォルダへ移動します"
 
 #. name, stock id
 #: src/nautilus-window-menus.c:634
@@ -6213,19 +6201,16 @@ msgstr "コンピュータ(_C)"
 
 #. label, accelerator
 #: src/nautilus-window-menus.c:635
-#, fuzzy
 msgid "Go to the computer location"
-msgstr "ホームへ移動します"
+msgstr "コンピュータへ移動します"
 
 #. name, stock id
 #: src/nautilus-window-menus.c:638
-#, fuzzy
 msgid "T_emplates"
-msgstr "テンプレート(_T)"
+msgstr "テンプレート(_E)"
 
 #. label, accelerator
 #: src/nautilus-window-menus.c:639
-#, fuzzy
 msgid "Go to the templates folder"
 msgstr "テンプレートのフォルダへ移動します"
 
@@ -6275,13 +6260,12 @@ msgid "Zoom Out"
 msgstr "縮小"
 
 #: src/nautilus-zoom-control.c:87
-#, fuzzy
 msgid "Zoom to Default"
-msgstr "ウィンドウサイズに"
+msgstr "デフォルトのレベル"
 
 #: src/nautilus-zoom-control.c:99
 msgid "Show in the default detail level"
-msgstr ""
+msgstr "デフォルトの詳細レベルで表示します"
 
 #: src/nautilus-zoom-control.c:802
 msgid "Zoom"
@@ -6298,281 +6282,3 @@ msgstr "ネットワーク・サーバ"
 #: src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Nautilus でお使いのネットワークのサーバを表示します"
-
-#~ msgid "bonobo_ui_init() failed."
-#~ msgstr "bonobo_ui_init() の呼び出しに失敗しました。"
-
-#~ msgid "Factory for Nautilus component adapter factories"
-#~ msgstr "Nautilus コンポーネント・アダプタ・ファクトリの一つ"
-
-#~ msgid "Factory for Nautilus component adapter factories "
-#~ msgstr "Nautilus コンポーネント・アダプタ・ファクトリの一つです。"
-
-#~ msgid ""
-#~ "Factory for objects that wrap ordinary Bonobo Controls or Embeddables to "
-#~ "look like Nautilus Views"
-#~ msgstr ""
-#~ "通常の Bonobo コントロールあるいは Nautilus ビューのような埋め込みラッ"
-#~ "パー・オブジェクトのファクトリ"
-
-#~ msgid "Nautilus component adapter factory"
-#~ msgstr "Nautilus コンポーネント・アダプタのファクトリ"
-
-#~ msgid "Nautilus Emblem side pane"
-#~ msgstr "Nautilus のエンブレム用サイド・ペイン"
-
-#~ msgid "Nautilus Emblem view"
-#~ msgstr "Nautilus エンブレム・ビュー"
-
-#~ msgid "History side pane"
-#~ msgstr "履歴のサイド・ペイン"
-
-#~ msgid "History side pane for Nautilus"
-#~ msgstr "Nautilus 履歴のサイド・ペイン"
-
-#~ msgid "URI currently displayed"
-#~ msgstr "現在表示している URI"
-
-#~ msgid "Image Properties content view component"
-#~ msgstr "画像のプロパティ・コンテンツ・ビュー・コンポーネント"
-
-#~ msgid "Nautilus Image Properties view"
-#~ msgstr "Nautilus 画像のプロパティ・ビュー"
-
-#~ msgid "Notes side pane"
-#~ msgstr "メモのサイド・ペイン"
-
-#~ msgid "Notes side pane for Nautilus"
-#~ msgstr "Nautilus メモのサイド・ペイン"
-
-#~ msgid "Factory for text view"
-#~ msgstr "テキスト表示のファクトリ"
-
-#~ msgid "Text"
-#~ msgstr "テキスト"
-
-#~ msgid "Text Viewer"
-#~ msgstr "テキスト・ビューア"
-
-#~ msgid "Text view"
-#~ msgstr "テキスト・ビュー"
-
-#~ msgid "Text view factory"
-#~ msgstr "テキスト表示のファクトリ"
-
-#~ msgid "View as Text"
-#~ msgstr "テキスト表示"
-
-#~ msgid "animation to indicate on-going activity"
-#~ msgstr "実行中であることを示すためのアニメーション"
-
-#~ msgid "throbber factory"
-#~ msgstr "throbber ファクトリ"
-
-#~ msgid "throbber object factory"
-#~ msgstr "throbber オブジェクト・ファクトリ"
-
-#~ msgid "C_lear Text"
-#~ msgstr "テキストのクリア(_L)"
-
-#~ msgid "Cut Text"
-#~ msgstr "テキストを切り取ってクリップボードに格納します"
-
-#~ msgid "Remove the selected text without putting it on the clipboard"
-#~ msgstr "選択したテキストをクリップボードに格納せず削除します"
-
-#~ msgid "Hide default bookmarks in the bookmark menu"
-#~ msgstr "ブックマーク・メニューの中にデフォルトのブックマークを表示しない"
-
-#~ msgid ""
-#~ "If set to true, then Nautilus will just show the user's bookmarks in the "
-#~ "bookmark menu."
-#~ msgstr ""
-#~ "TRUE にすると、ブックマーク・メニューの中にユーザのブックマークのみ表示し"
-#~ "ます。"
-
-#~ msgid "%s Viewer"
-#~ msgstr "%s ビューア"
-
-#~ msgid "Could not complete specified action:  %s"
-#~ msgstr "指定したアクションを完了できませんでした: %s"
-
-#~ msgid "Could not complete specified action."
-#~ msgstr "指定したアクションを完了できませんでした。"
-
-#~ msgid "Use the default desktop background"
-#~ msgstr "デスクトップの背景としてデフォルトを使用します"
-
-#~ msgid "Edit Launcher"
-#~ msgstr "ランチャの編集"
-
-#~ msgid "Edit the launcher information"
-#~ msgstr "ランチャの情報を編集します"
-
-#~ msgid "Format the selected volume"
-#~ msgstr "選択したボリュームをフォーマットします"
-
-#~ msgid "Medi_a Properties"
-#~ msgstr "メディアのプロパティ(_A)"
-
-#~ msgid "Prot_ect"
-#~ msgstr "保護(_E)"
-
-#~ msgid "Protect the selected volume"
-#~ msgstr "選択したボリュームを保護します"
-
-#~ msgid "Show media properties for the selected volume"
-#~ msgstr "選択したボリュームのメディア・プロパティを表示します"
-
-#~ msgid "_Format"
-#~ msgstr "フォーマット(_F)"
-
-#~ msgid "One of the side panels encountered an error and can't continue."
-#~ msgstr "サイド・パネルのひとつでエラーが発生したため続行できません。"
-
-#~ msgid "Unfortunately I couldn't tell which one."
-#~ msgstr "残念ながら、どのパネルで発生したのか分かりません。"
-
-#~ msgid "The %s side panel encountered an error and can't continue."
-#~ msgstr "%s サイド・パネルでエラーが発生したため続行できません。"
-
-#~ msgid "If this keeps happening, you might want to turn this panel off."
-#~ msgstr ""
-#~ "もしこの現象が起り続けるようなら、このパネルを無効にしてみて下さい。"
-
-#~ msgid "Side Panel Failed"
-#~ msgstr "サイド・パネルの起動不可"
-
-#~ msgid "Side Pane"
-#~ msgstr "サイド・ペイン"
-
-#~ msgid "Contains a side pane view"
-#~ msgstr "サイド・ペイン表示を含める"
-
-#~ msgid "Back"
-#~ msgstr "戻る"
-
-#~ msgid "Find"
-#~ msgstr "検索"
-
-#~ msgid "Forward"
-#~ msgstr "進む"
-
-#~ msgid "Home"
-#~ msgstr "ホーム"
-
-#~ msgid "Reload"
-#~ msgstr "再読込み"
-
-#~ msgid "Search this computer for files"
-#~ msgstr "このマシンのファイルを検索します"
-
-#~ msgid "Stop"
-#~ msgstr "停止"
-
-#~ msgid "Up"
-#~ msgstr "上へ"
-
-#~ msgid "Print"
-#~ msgstr "印刷"
-
-#~ msgid "Save"
-#~ msgstr "保存"
-
-#~ msgid "Profile Dump"
-#~ msgstr "プロファイルのダンプ"
-
-#~ msgid "Display the latest contents of the current location"
-#~ msgstr "この場所の内容を更新して表示します"
-
-#~ msgid "Go to Empty CD folder"
-#~ msgstr "空の CD フォルダへ移動します"
-
-#~ msgid "Go up one level"
-#~ msgstr "ひとつ上に移動します"
-
-#~ msgid "Report Profiling"
-#~ msgstr "プロファイルをレポートします"
-
-#~ msgid "Reset Profiling"
-#~ msgstr "プロファイルをリセットします"
-
-#~ msgid "Start Profiling"
-#~ msgstr "プロファイルを開始します"
-
-#~ msgid "Stop Profiling"
-#~ msgstr "プロファイルを停止します"
-
-#~ msgid "Stop loading this location"
-#~ msgstr "この場所の読み込みを停止します"
-
-#~ msgid "_CD/DVD Creator"
-#~ msgstr "CD/DVD の作成(_C)"
-
-#~ msgid "_Profiler"
-#~ msgstr "プロファイラ(_P)"
-
-#~ msgid "_Report Profiling"
-#~ msgstr "プロファイルのレポート(_R)"
-
-#~ msgid "_Reset Profiling"
-#~ msgstr "プロファイルのリセット(_R)"
-
-#~ msgid "_Start Profiling"
-#~ msgstr "プロファイルの開始(_S)"
-
-#~ msgid "_Stop Profiling"
-#~ msgstr "プロファイルの停止(_S)"
-
-#~ msgid "Go to Computer"
-#~ msgstr "コンピュータへ移動します"
-
-#~ msgid "a title"
-#~ msgstr "タイトル"
-
-#~ msgid "the browse history"
-#~ msgstr "ブラウズの履歴"
-
-#~ msgid "the current selection"
-#~ msgstr "現在の選択"
-
-#~ msgid "the type of window the view is embedded in"
-#~ msgstr "ビューが組み込まれているウィンドウのタイプ"
-
-#~ msgid "whether to show hidden files in the view"
-#~ msgstr "隠しファイルを表示するかどうかです"
-
-#~ msgid "Application ID"
-#~ msgstr "アプリケーションID"
-
-#~ msgid "The application ID of the window."
-#~ msgstr "ウィンドウのアプリケーション ID です。"
-
-#~ msgid "Nautilus cannot determine what type of file it is."
-#~ msgstr "そのファイルの種類を認識できません。"
-
-#~ msgid ""
-#~ "Searching is unavailable right now, because you either have no index, or "
-#~ "the search service isn't running."
-#~ msgstr ""
-#~ "現在、検索用のインデックスがないかまたは検索サービスが起動されていないた"
-#~ "め、検索は利用できません。"
-
-#~ msgid ""
-#~ "Be sure that you have started the Medusa search service, and if you don't "
-#~ "have an index, that the Medusa indexer is running."
-#~ msgstr ""
-#~ "Medusa 検索サービスが起動していることを確認して、インデックスがない場合は "
-#~ "medusa-indexd を起動して下さい。"
-
-#~ msgid "Searching Unavailable"
-#~ msgstr "検索は利用できません"
-
-#~ msgid "Go back a few pages"
-#~ msgstr "数ページ前に戻ります"
-
-#~ msgid "Go forward a number of pages"
-#~ msgstr "数ページ進みます"
-
-#~ msgid "Try to fit in window"
-#~ msgstr "ウィンドウに合うようにします"
