Updated Norwegian bokmål translation.
2004-11-25  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Updated Norwegian bokmål translation.

--- a/po/nb.po
+++ b/po/nb.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.8.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-24 13:23+0100\n"
-"PO-Revision-Date: 2004-09-17 21:22+0200\n"
+"POT-Creation-Date: 2004-11-25 10:37+0100\n"
+"PO-Revision-Date: 2004-11-25 10:41+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Nynorsk <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -3249,9 +3249,8 @@ msgid "Desktop"
 msgstr "Skrivebord"
 
 #: src/file-manager/fm-desktop-icon-view.c:768
-#, fuzzy
 msgid "_Desktop"
-msgstr "Skrivebord"
+msgstr "_Skrivebord"
 
 #: src/file-manager/fm-directory-view.c:509
 #, c-format
@@ -3653,9 +3652,8 @@ msgstr "_Skript"
 
 #. name, stock id, label
 #: src/file-manager/fm-directory-view.c:5695
-#, fuzzy
 msgid "Run or manage scripts from ~/.gnome2/nautilus-scripts"
-msgstr "Kjør eller håndter skript fra ~/Nautilus/scripts"
+msgstr "Kjør eller håndter skript fra ~/.gnome2/nautilus-scripts"
 
 #. name, stock id
 #: src/file-manager/fm-directory-view.c:5697
@@ -3925,9 +3923,8 @@ msgstr "Avmonter valgt volum"
 
 #. name, stock id
 #: src/file-manager/fm-directory-view.c:5812
-#, fuzzy
 msgid "Open File and Close window"
-msgstr "Åpne i nytt vindu"
+msgstr "Åpne fil og lukk vindu"
 
 #. name, stock id
 #: src/file-manager/fm-directory-view.c:5819
@@ -4252,11 +4249,8 @@ msgstr "Rydd _opp etter navn"
 
 #. label, accelerator
 #: src/file-manager/fm-icon-view.c:1402
-#, fuzzy
 msgid "Reposition icons to better fit in the window and avoaction overlapping"
-msgstr ""
-"Reposisjoner ikonene slik at de passer bedre til vinduene og unngår "
-"overlapping"
+msgstr "Plasser ikonene på nytt slik at de passer bedre til vinduene og unngår overlapping"
 
 #. name, stock id
 #: src/file-manager/fm-icon-view.c:1408
@@ -4342,9 +4336,8 @@ msgid "An invalid drag type was used."
 msgstr "En ugyldig type ble brukt for draoperasjon."
 
 #: src/file-manager/fm-icon-view.c:2842
-#, fuzzy
 msgid "_Icons"
-msgstr "Ikoner"
+msgstr "_Ikoner"
 
 #: src/file-manager/fm-list-view.c:1564
 #, c-format
@@ -4366,9 +4359,8 @@ msgid "Select the columns visible in this folder"
 msgstr "Velg synlige kolonner i denne mappen"
 
 #: src/file-manager/fm-list-view.c:2269
-#, fuzzy
 msgid "_List"
-msgstr "Liste"
+msgstr "_Liste"
 
 #: src/file-manager/fm-properties-window.c:478
 msgid "You can't assign more than one custom icon at a time!"
@@ -5606,15 +5598,13 @@ msgstr "_Bokmerker"
 
 #. name, stock id, label
 #: src/nautilus-navigation-window-menus.c:538
-#, fuzzy
 msgid "Open New _Window"
-msgstr "Åpne i nytt vindu"
+msgstr "Åpne nytt _vindu"
 
 #. name, stock id, label
 #: src/nautilus-navigation-window-menus.c:539
-#, fuzzy
 msgid "Open another Nautilus window for the displayed location"
-msgstr "Bruk forvalgt bakgrunn for denne lokasjonen"
+msgstr "Åpne et nytt Nautilus-vindu for denne lokasjonen"
 
 #: src/nautilus-navigation-window-menus.c:541
 msgid "Close _All Windows"
@@ -5633,7 +5623,7 @@ msgstr "P_lassering..."
 #: src/nautilus-navigation-window-menus.c:545
 #: src/nautilus-spatial-window.c:578
 msgid "Specify a location to open"
-msgstr ""
+msgstr "Oppgi en lokasjon som skal åpnes"
 
 #: src/nautilus-navigation-window-menus.c:547
 msgid "_Clear History"
@@ -5985,19 +5975,16 @@ msgid "Content View"
 msgstr "Innholdsvisning"
 
 #: src/nautilus-window-manage-views.c:986
-#, fuzzy
 msgid "View of the current folder"
-msgstr "Visning av aktiv fil eller mappe"
+msgstr "Visning for aktiv mappe"
 
 #: src/nautilus-window-manage-views.c:1347
-#, fuzzy
 msgid "Nautilus has no installed viewer capable of displaying the folder."
-msgstr "Nautilus har ingen installerte visningsprogrammer som kan vise filen."
+msgstr "Nautilus har ingen installerte visningsprogrammer som kan vise mappen."
 
 #: src/nautilus-window-manage-views.c:1353
-#, fuzzy
 msgid "The location is not a folder."
-msgstr "Lokasjonen «%s» eksisterer ikke."
+msgstr "Lokasjonen er ikke en mappe."
 
 #: src/nautilus-window-manage-views.c:1380
 #, c-format
@@ -6192,9 +6179,8 @@ msgstr "Koble til _tjener..."
 
 #. label, accelerator
 #: src/nautilus-window-menus.c:627
-#, fuzzy
 msgid "Set up a connection to a network server"
-msgstr "Opprett en permanent tilkobling til denne tjeneren"
+msgstr "Opprett en tilkobling til en nettverkstjener"
 
 #. name, stock id
 #: src/nautilus-window-menus.c:630
@@ -6203,9 +6189,8 @@ msgstr "_Hjem"
 
 #. label, accelerator
 #: src/nautilus-window-menus.c:631
-#, fuzzy
 msgid "Go to the home folder"
-msgstr "Gå til papirkurven"
+msgstr "Gå til hjemmemappen"
 
 #. name, stock id
 #: src/nautilus-window-menus.c:634
@@ -6214,19 +6199,16 @@ msgstr "_Datamaskin"
 
 #. label, accelerator
 #: src/nautilus-window-menus.c:635
-#, fuzzy
 msgid "Go to the computer location"
-msgstr "Gå til startsiden"
+msgstr "Gå til datamaskin-mappen"
 
 #. name, stock id
 #: src/nautilus-window-menus.c:638
-#, fuzzy
 msgid "T_emplates"
 msgstr "_Maler"
 
 #. label, accelerator
 #: src/nautilus-window-menus.c:639
-#, fuzzy
 msgid "Go to the templates folder"
 msgstr "Gå til malmappen"
 
@@ -6276,13 +6258,12 @@ msgid "Zoom Out"
 msgstr "Zoom ut"
 
 #: src/nautilus-zoom-control.c:87
-#, fuzzy
 msgid "Zoom to Default"
-msgstr "Tilpasset zoom"
+msgstr "Zoom til forvalgt verdi"
 
 #: src/nautilus-zoom-control.c:99
 msgid "Show in the default detail level"
-msgstr ""
+msgstr "Vis med forvalgt detaljnivå"
 
 #: src/nautilus-zoom-control.c:802
 msgid "Zoom"
