No need to define VERSION here, it's aleady in config.h. Fix the build.
2004-11-25  Marco Pesenti Gritti  <marco@gnome.org>

        * src/file-manager/Makefile.am:

        No need to define VERSION here, it's aleady in
        config.h. Fix the build.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-11-25  Marco Pesenti Gritti  <marco@gnome.org>
 
+	* src/file-manager/Makefile.am:
+
+	No need to define VERSION here, it's aleady in
+	config.h. Fix the build.
+
+2004-11-25  Marco Pesenti Gritti  <marco@gnome.org>
+
 	reviewed by: Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
