Fix a few typos in icon placement. Patch from Jimmy Do
2004-11-29  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c: (snap_position),
	(find_empty_location):
	Fix a few typos in icon placement.
	Patch from Jimmy Do <crispyleaves@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-11-29  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-container.c: (snap_position),
+	(find_empty_location):
+	Fix a few typos in icon placement.
+	Patch from Jimmy Do <crispyleaves@gmail.com>
+
 2004-11-25  Marco Pesenti Gritti  <marco@gnome.org>
 
 	* src/file-manager/Makefile.am:
